# Agent_Builder_Workflow

./: .gitignore  CLAUDE.md  _brand.yml  connect_app.py  console_app.py  intake_app.py  requirements.txt
orchestrator/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
orchestrator/app/: __init__.py  agent_runtime.py  agents.py  api.py  auth.py  check_gateway.py  composition.py  config.py  console.py  context_policy.py  enums.py  intake.py  intake_console.py  invocation.py  logging_audit.py  maintenance.py  markers.py  notifications.py  pipeline_runner.py  request_store.py  retry_loop.py  run_evals.py  run_intake.py  runtime.py  security_review.py  sensitivity.py  shiny_logic.py  shiny_ui.py  state_machine.py  templating.py
orchestrator/tests/: test_agent_runtime.py  test_agents.py  test_airtable_datastore.py  test_auth.py  test_build_suite.py  test_composition.py  test_console.py  test_context_policy.py  test_deepdive_suite.py  test_durable_resume.py  test_end_to_end_fake.py  test_enums_and_api.py  test_evals_harness.py  test_intake_console.py  test_invocation.py  test_lifecycle_composition.py  test_live_runners_smoke.py  test_live_smoke.py  test_maintenance_jobs.py  test_markers.py  test_notifications.py  test_phase5_suites.py  test_pipeline_runner.py  test_portfolio_registry_suites.py  test_qa_suite.py  test_registry_search.py  test_resend_emailer.py  test_retry_loop.py  test_rom_suite.py  test_rubric.py  test_rubric_judge_smoke.py  test_runtime_fake.py  test_security_suite.py  test_sensitivity.py  test_shiny_logic.py  test_spine_wiring.py  (+1 more)
(+144 files in other folders)
